--- a/src/App.scss
+++ b/src/App.scss
@@ -40,6 +40,40 @@
   }
 }
 
+.world-wrapper {
+  position: relative;
+  background-image: url("./assets/background.jpg");
+  background-repeat: no-repeat, no-repeat;
+  background-size: cover;
+  width: auto;
+  height: 600px;
+  color: white;
+
+  .text {
+    position: absolute;
+    left: 30px;
+    top: 30px;
+    text-align: left;
+    width: 30vw;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 30px;
+    line-height: 150%;
+  }
+
+  .world {
+    position:absolute;
+    right: 0;
+
+    width: 60%;
+    height: 60%;
+
+    @media only screen and (max-width: 500px) {
+      width: 100%;
+    }
+  }
+}
+
 .character-select {
   position: relative;
   background-image: url("./assets/background.jpg");
